--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         // キャラクター画像のマッピング (レベルごとに変更)
         const characterImages = {
-            1: 'images/tex_lv1.png',
+            1: 'images/tex.png',
             2: 'images/tex_lv2.png',
             3: 'images/tex_lv3.png',
             4: 'images/tex_lv4.png',
